一、rabbitframework1.1.3版本说明:
   1、修改所有pom版本,升级rabbitframework版本号为1.1.3