@@ -1,2 +1,7 @@
 一、rabbitframework1.1.3版本说明:
    1、修改所有pom版本,升级rabbitframework版本号为1.1.3
+   
+二、security框架：
+   1、修改AbstractSecurityFilter类中filterUrl请求，匹配过滤条件将直接调用底层Filter的过滤方法,否则调用security的Filter。
+
+   
